szkolenie-k8s/PART9-TLS-SSL-HTTPS/LAB3/admin-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=WITAJ W TAJNYM PANELU ADMINISTRATORA!"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 5678
