szkolenie-k8s/PART9-TLS-SSL-HTTPS/LAB3/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # ZMIANA PONIŻEJ: Usunąłem wykrzyknik i polskie znaki/spacje, żeby nie drażnić walidatora
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - admin.local
      secretName: admin-tls
  rules:
    - host: admin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-svc
                port:
                  number: 80
